# ExpressionEvaluator

./: CMakeLists.txt  exceptions.h  expressionevaluator.h  main.cpp  operationnode.h  treenode.h
ExpressionEvaluator.xcodeproj/: project.pbxproj
ExpressionEvaluator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ExpressionEvaluator.xcodeproj/xcuserdata/Sandu.xcuserdatad/xcschemes/: xcschememanagement.plist
