cmake_minimum_required(VERSION 3.5.1)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ./)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ./)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./)
project(expression_evaluator C CXX)
set (CMAKE_CXX_STANDARD 11)
set(SOURCES exceptions.h expressionevaluator.h operationnode.h treenode.h main.cpp)
include_directories(/usr/local/lib)
add_executable(expression_evaluator ${SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "expression_evaluator")
set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
